[gd_scene load_steps=2 format=3 uid="uid://4e1ewlxu67gbj"]

[ext_resource type="Script" path="res://algorithms/datastructures/bsp_trees/BSPTrees.gd" id="1"]

[node name="BSPTrees" type="Node3D"]
script = ExtResource("1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 12, 18)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
light_energy = 1.0
shadow_enabled = true

[node name="BSPTreeStructure" type="Node3D" parent="."]

[node name="SpacePartitions" type="Node3D" parent="."]

[node name="TraversalDemo" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="ConstructionProcess" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

